namespace SOS_Game;

public record Position(int row, int column);