namespace SOS_Game;

public enum PlayerType
{
    None,
    BlueLeft,
    RedRight,
}

public enum TileType
{
    None,
    S,
    O,
}

public enum GameType
{
    Simple,
    General
}

